--- a/Eventhings/clients/register.html
+++ b/Eventhings/clients/register.html
@@ -41,12 +41,24 @@
                                         <input type="email" class="form-control" id="email" required name="email" placeholder="a.farouq@imtechnetronics.com">
                                     </div>
                                     <div class="form-group">
+                                        <label for="confirmPassword">Phone number <sup>*</sup></label>
+                                        <input type="text" class="form-control" required id="phone" name="phone" placeholder="Phone number">
+                                    </div>
+                                    <div class="form-group">
                                         <label for="password">Password <sup>*</sup></label>
                                         <input type="password" class="form-control" id="password" required name="password" placeholder="Password">
                                     </div>
                                     <div class="form-group">
                                         <label for="confirmPassword">Confirm Password <sup>*</sup></label>
                                         <input type="password" class="form-control" required id="confirmPassword" name="confirmPassword" placeholder="Confirm Password">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="confirmPassword">First name <sup>*</sup></label>
+                                        <input type="text" class="form-control" required id="firstname" name="firstname" placeholder="First name">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="confirmPassword">Last name <sup>*</sup></label>
+                                        <input type="text" class="form-control" required id="lastname" name="lastname" placeholder="Last name">
                                     </div>
                                     <button class="btn btn-primary btn-auth-submit" type="submit" id="btnSubmit">Create account</button>
                                 </form>
