QR code text filter by batchname and batch number

--- a/Eventhings/clients/index.html
+++ b/Eventhings/clients/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Eventhings App Landing Page</title>
+    <title>Eventi.ng -  Welcome to eventi.ng</title>
     <link rel="stylesheet" href="assets/vendors/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -37,6 +37,7 @@
     <script src="assets/vendors/popper.js/popper.min.js"></script>
     <script src="assets/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
 
+    <script src="assets/js/app.js"></script>
 
     <script type="text/javascript">
         $(document).ready(function () {
