--- a/Eventhings/clients/auth/codelink.html
+++ b/Eventhings/clients/auth/codelink.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Eventi.ng - Contact Us</title>
-    <link rel="stylesheet" href="assets/vendors/fontawesome-free/css/all.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Eventi.ng - Code Link</title>
+    <link rel="stylesheet" href="../assets/vendors/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
 <body>
@@ -25,14 +25,14 @@
             </section>
             <section class="contact-content">
                 <div class="contact-widget media">
-                    <img src="assets/images/icon-4.png" alt="monitor" width="50">
+                    <img src="../assets/images/icon-4.png" alt="monitor" width="50px">
                     <div class="media-body">
                         <h6 class="widget-title">Head Office</h6>
                         <p class="widget-content">hello@eventhings.com</p>
                     </div>
                 </div>
                 <div class="contact-widget media">
-                    <img src="assets/images/icon-5.png" alt="book" width="40">
+                    <img src="assets/images/icon-5.png" alt="book" width="40px">
                     <div class="media-body">
                         <h6 class="widget-title">Administration Office</h6>
                         <p class="widget-content">hello@eventhings.com</p>
@@ -78,15 +78,15 @@
 
     <div id="footer"></div>
 
-    <script src="assets/vendors/jquery/jquery.min.js"></script>
-    <script src="assets/vendors/popper.js/popper.min.js"></script>
-    <script src="assets/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../assets/vendors/jquery/jquery.min.js"></script>
+    <script src="../assets/vendors/popper.js/popper.min.js"></script>
+    <script src="../assets/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <script type="text/javascript">
         $(document).ready(function () {
             console.log("Jquery is ready to shoot!!");
 
-            $("#nav").load("layouts/nav.html");
+            $("#nav").load("../layouts/nav.html");
 
             //$("#banner").load("layouts/banner.html");
 
@@ -100,7 +100,7 @@
 
             //$("#faq").load("layouts/faq.html");
 
-            $("#footer").load("layouts/footer.html");
+            $("#footer").load("../layouts/footer.html");
 
             //footer year
             var year = new Date().getFullYear();
