--- a/Eventhings/clients/login.html
+++ b/Eventhings/clients/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>FOI App Landing Page</title>
+    <title>Eventi - Login</title>
     <link rel="stylesheet" href="assets/vendors/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -22,17 +22,14 @@
             <div class="row">
                 <div class="col-lg-10 offset-lg-1">
                     <section class="auth-wrapper">
-                        <!--style="padding-top:10px"-->
                         <div class="row">
                             <div class="col-md-6 mb-4 mb-md-0">
                                 <h2 class="auth-section-title">Log In</h2>
                                 <p class="auth-section-subtitle">Sign in to your account to continue.</p>
 
-                                <div class="alert alert-danger alert-dismissible" id="divAlert">
+                                <div class="alert alert-danger alert-dismissible" id="divAlert" style="display:none">
                                     <button type="button" class="close" data-dismiss="alert">&times;</button>
-                                    <p id="lblErrorText">
-                                        <!--<strong>Error!</strong> Indicates a successful or positive action.-->
-                                    </p>
+                                    <p id="lblErrorText"></p>
                                 </div>
 
                                 <form action="login.html" method="POST" id="frmLogin">
@@ -53,7 +50,10 @@
                                         </div>
                                         <a href="forgot-password.html" class="forgot-password-link">Forgot password?</a>
                                     </div>
-                                    <button class="btn btn-primary btn-auth-submit" type="submit" id="btnSubmit">Submit</button>
+                                    <button class="btn btn-primary btn-auth-submit" type="submit" id="btnSubmit">
+                                        Submit
+                                        <span class="fa fa-spinner" style="display:none" id="spinner"></span>
+                                    </button>
                                 </form>
                                 <p class="mb-0">
                                     <a href="register.html" class="text-dark font-weight-bold">New User? Sign Up</a>
@@ -81,15 +81,12 @@
     <script src="assets/js/app.js"></script>
 
     <script type="text/javascript">
+        /*$("#divAlert").hide();*/
+       /* $("#spinner").hide();*/
+
         $(document).ready(function () {
 
             console.log("Jquery is ready to shoot!!");
-
-            console.log(window.location.href);
-            console.log(window.location.host);
-            console.log(window.location.hostname);
-
-            $("#divAlert").hide();
 
             $("#nav").load("layouts/nav.html");
 
@@ -104,7 +101,7 @@
                 var login = {
                     email: $("#email").val(),
                     password_hash: $("#password").val(),
-                    keep_me_signin: $("#keepLogin").attr('checked')
+                    keep_me_signin: $("#keepLogin").prop('checked')
                 };
 
                 var data = {
@@ -133,19 +130,27 @@
                                 sessionStorage.setItem('email', $("#email").val());
 
                                 var referLink = document.createElement("a");
-                                referLink.href = "/admin/qrcodegen.aspx";
+                                referLink.href = "auth/dashboard.aspx";
                                 document.body.appendChild(referLink);
                                 referLink.click();
 
                             }
                             else if (status == '0') {
-                                $("#divAlert").addClass("alert alert-danger alert-dismissible fade show").slideDown("slow");
+                                $("#divAlert").addClass("alert alert-danger alert-dismissible fade show").attr('display', false).slideDown("slow");
                                 $("#lblErrorText").html(responseData.Message);
                             }
                         },
+                        beforeSend: function () {
+                            $("#spinner").show();
+                            $("#btnSubmit").attr('disabled', true);
+                        },
+                        complete: function () {
+                            $("#spinner").hide();
+                            $("#btnSubmit").attr('disabled', false);
+                        },
                         error: function (data) {
                             console.log(data);
-                            $("#divAlert").addClass("alert alert-danger alert-dismissible fade show").slideDown("slow");
+                            $("#divAlert").addClass("alert alert-danger alert-dismissible fade show").attr('display', false).slideDown("slow");
                             $("#lblErrorText").html("Error occured while submiting form");
                             /*console.error(data);*/
                         }
@@ -153,7 +158,7 @@
 
 
                 } else {
-                    $("#divAlert").show().addClass("alert alert-warning alert-dismissible fade show").slideDown("slow");
+                    $("#divAlert").show().addClass("alert alert-warning alert-dismissible fade show").attr('display', false).slideDown("slow");
                     $("#lblErrorText").html("Please fill out the required field(s)");
                     return;
                 }
