--- a/Eventhings/clients/forgot-password.html
+++ b/Eventhings/clients/forgot-password.html
@@ -35,25 +35,12 @@
                                     </p>
                                 </div>
 
-                                <form action="login.html" method="POST" id="frmForgotPassword">
+                                <form action="forgot-password.html" method="POST" id="frmForgotPassword">
                                     <div class="form-group">
                                         <label for="email">Email <sup>*</sup></label>
-                                        <input type="email" class="form-control" id="email" required name="email" placeholder="a.farouq@imtechnetronics.com">
+                                        <input type="email" class="form-control" id="txtEmail" required name="txtEmail" placeholder="ahmedfaruk888@gmail.com">
                                     </div>
-                                    <!--<div class="form-group">
-                    <label for="password">Password <sup>*</sup></label>
-                    <input type="password" class="form-control" required id="password" name="password" placeholder="Password *">
-                </div>
-                <div class="form-actions-wrapper d-flex flex-wrap align-items-center justify-content-between">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="keepLogin">
-                        <label class="form-check-label" for="keepLogin">
-                            keep me login
-                        </label>
-                    </div>
-                    <a href="#!" class="forgot-password-link">Forgot password?</a>
-                </div>-->
-                                    <button class="btn btn-primary btn-auth-submit" type="submit" id="btnSubmit">Submit</button>
+                                    <button class="btn btn-primary btn-auth-submit" type="submit" id="btnSubmit">Send Password Reset Link</button>
                                 </form>
                                 <p class="mb-0">
                                     <a href="register.html" class="text-dark font-weight-bold">New User? Sign Up</a>
