--- a/Eventhings/clients/register.html
+++ b/Eventhings/clients/register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>FOI App Landing Page</title>
+    <title>Eventi.ng -  create an account</title>
     <link rel="stylesheet" href="assets/vendors/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -38,29 +38,29 @@
                                 <form action="register.html" method="POST" id="frmRegister">
                                     <div class="form-group">
                                         <label for="email">Email <sup>*</sup></label>
-                                        <input type="email" class="form-control" id="email" required name="email" placeholder="a.farouq@imtechnetronics.com">
+                                        <input type="email" class="form-control" id="txtEmail" required name="txtEmail" placeholder="a.farouq@imtechnetronics.com">
                                     </div>
                                     <div class="form-group">
                                         <label for="confirmPassword">Phone number <sup>*</sup></label>
-                                        <input type="text" class="form-control" required id="phone" name="phone" placeholder="Phone number">
+                                        <input type="text" class="form-control" required id="txtPhone" name="txtPhone" placeholder="+2348144488577">
                                     </div>
                                     <div class="form-group">
                                         <label for="password">Password <sup>*</sup></label>
-                                        <input type="password" class="form-control" id="password" required name="password" placeholder="Password">
+                                        <input type="password" class="form-control" id="txtPassword" required name="txtPassword" placeholder="Password">
                                     </div>
                                     <div class="form-group">
                                         <label for="confirmPassword">Confirm Password <sup>*</sup></label>
-                                        <input type="password" class="form-control" required id="confirmPassword" name="confirmPassword" placeholder="Confirm Password">
+                                        <input type="password" class="form-control" required id="txtConfirmPassword" name="txtConfirmPassword" placeholder="Confirm Password">
                                     </div>
                                     <div class="form-group">
                                         <label for="confirmPassword">First name <sup>*</sup></label>
-                                        <input type="text" class="form-control" required id="firstname" name="firstname" placeholder="First name">
+                                        <input type="text" class="form-control" required id="txtFirstName" name="txtFirstName" placeholder="Farouq">
                                     </div>
                                     <div class="form-group">
                                         <label for="confirmPassword">Last name <sup>*</sup></label>
-                                        <input type="text" class="form-control" required id="lastname" name="lastname" placeholder="Last name">
+                                        <input type="text" class="form-control" required id="txtLastName" name="txtLastName" placeholder="Ahmed">
                                     </div>
-                                    <button class="btn btn-primary btn-auth-submit" type="submit" id="btnSubmit">Create account</button>
+                                    <button class="btn btn-primary btn-auth-submit" type="submit" id="btnSubmit">Create Account</button>
                                 </form>
                                 <p class="mb-0">
                                     <a href="login.html" class="text-dark font-weight-bold">Already have an acocunt? Sign in</a>
@@ -88,7 +88,10 @@
     <script type="text/javascript">
         $(document).ready(function () {
 
+            $('label sup').css('color', 'red');
+
             console.log("Jquery is ready to shoot!!");
+
             $("#divAlert").hide();
 
             $("#nav").load("layouts/nav.html");
@@ -102,13 +105,76 @@
 
                 e.preventDefault();
 
+                var register = {
+                    user_type: 1,
+                    email: $("#txtEmail").val(),
+                    phone_number: $("#txtPhone").val(),
+                    password_hash: $("#txtPassword").val(),
+                    first_name: $("#txtFirstName").val(),
+                    last_name: $("#txtLastName").val(),
+                    other_name: $("#password").val(),
+                    password_hash: $("#password").val(),
+                    direction: 0
+
+
+                    //require_password_change: 0,
+                    //phone_number_confirmed: 1,
+                    //email_confirmed: 0,
+                    //active: 1
+                };
+
+                var data = {
+                    register: register
+                };
+
                 if ($("#frmRegister").valid()) {
 
-                    e.preventDefault();
-                    $("#divAlert").hide();
+                    $.ajax({
+                        type: "POST",
+                        url: "/Services/authenticate.asmx/Register",
+                        dataType: "json",
+                        contentType: "application/json; charset=utf-8",
+                        data: JSON.stringify(data),
+                        success: function (response) {
+
+                            var responseData = (response.d !== null || response.d !== undefined) ? response.d : response;
+
+                            //parse the response as json data;
+                            responseData = JSON.parse(responseData);
+                            var status = responseData.Status;
+                            if (status >= '1') {
+
+                                /*window.location.href = window.location.host + "/admin/qrcodegen.aspx";*/
+
+                                sessionStorage.setItem('email', $("#email").val());
+                                $("#divAlert").addClass("alert alert-success alert-dismissible fade show").attr('display', true).slideDown("slow");
+                                $("#lblErrorText").html(responseData.Message);
+
+                            }
+                            else if (status == '0') {
+                                $("#divAlert").addClass("alert alert-danger alert-dismissible fade show").attr('display', false).slideDown("slow");
+                                $("#lblErrorText").html(responseData.Message);
+                            }
+                        },
+                        beforeSend: function () {
+                            $("#spinner").show();
+                            $("#btnSubmit").attr('disabled', true);
+                        },
+                        complete: function () {
+                            $("#spinner").hide();
+                            $("#btnSubmit").attr('disabled', false);
+                        },
+                        error: function (data) {
+                            console.log(data);
+                            $("#divAlert").addClass("alert alert-danger alert-dismissible fade show").attr('display', false).slideDown("slow");
+                            $("#lblErrorText").html("Error occured while submiting form");
+                            /*console.error(data);*/
+                        }
+                    });
+
 
                 } else {
-                    $("#divAlert").show().addClass("alert alert-warning alert-dismissible fade show").slideDown("slow");
+                    $("#divAlert").show().addClass("alert alert-warning alert-dismissible fade show").attr('display', false).slideDown("slow");
                     $("#lblErrorText").html("Please fill out the required field(s)");
                     return;
                 }
