--- a/Eventhings/clients/verify-account.html
+++ b/Eventhings/clients/verify-account.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Eventi - Login</title>
+    <title>Eventi.ng - verify your account</title>
     <link rel="stylesheet" href="assets/vendors/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -22,45 +22,32 @@
             <div class="row">
                 <div class="col-lg-10 offset-lg-1">
                     <section class="auth-wrapper">
+                        <!--style="padding-top:10px"-->
                         <div class="row">
                             <div class="col-md-6 mb-4 mb-md-0">
-                                <h2 class="auth-section-title">Log In</h2>
-                                <p class="auth-section-subtitle">Sign in to your account to continue.</p>
+                                <h2 class="auth-section-title">Verify Account</h2>
+                                <p class="auth-section-subtitle">Verify your account, enter the verification code below.</p>
 
-                                <div class="alert alert-danger alert-dismissible" id="divAlert" style="display:none">
+                                <div class="alert alert-danger alert-dismissible" id="divAlert">
                                     <button type="button" class="close" data-dismiss="alert">&times;</button>
-                                    <p id="lblErrorText"></p>
+                                    <p id="lblErrorText">
+                                        <strong>Error!</strong> Indicates a successful or positive action.
+                                    </p>
                                 </div>
 
-                                <form action="login.html" method="POST" id="frmLogin">
+                                <form action="verify-account.html" method="POST" id="frmVerifyAccount">
                                     <div class="form-group">
-                                        <label for="email">Email <sup>*</sup></label>
-                                        <input type="email" class="form-control" id="email" required name="email" placeholder="ahmedfaruk8888@gmail.com">
+                                        <label for="email">Verification Code <sup>*</sup></label>
+                                        <input type="text" class="form-control" id="txtEmail" required name="txtVerificationCode" placeholder="1234567">
                                     </div>
-                                    <div class="form-group">
-                                        <label for="password">Password <sup>*</sup></label>
-                                        <input type="password" class="form-control" required id="password" name="password" placeholder="**********">
-                                    </div>
-                                    <div class="form-actions-wrapper d-flex flex-wrap align-items-center justify-content-between">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="" id="keepLogin">
-                                            <label class="form-check-label" for="keepLogin">
-                                                keep me login
-                                            </label>
-                                        </div>
-                                        <a href="forgot-password.html" class="forgot-password-link">Forgot password?</a>
-                                    </div>
-                                    <button class="btn btn-primary btn-auth-submit" type="submit" id="btnSubmit">
-                                        Submit
-                                        <span class="fa fa-spinner" style="display:none" id="spinner"></span>
-                                    </button>
+                                    <button class="btn btn-primary btn-auth-submit" type="submit" id="btnSubmit">Verify Account</button>
                                 </form>
                                 <p class="mb-0">
-                                    <a href="register.html" class="text-dark font-weight-bold">New User? Sign Up</a>
+                                    <a href="#" class="text-dark font-weight-bold">Didn't get the code? Resend code</a>
                                 </p>
                             </div>
                             <div class="col-md-6 d-flex align-items-center">
-                                <img src="assets/images/login.png" alt="login" class="img-fluid">
+                                <img src="assets/images/Register.png" alt="login" class="img-fluid">
                             </div>
                         </div>
                     </section>
@@ -74,21 +61,18 @@
     <script src="assets/vendors/jquery/jquery.min.js"></script>
     <script src="assets/vendors/popper.js/popper.min.js"></script>
     <script src="assets/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
 
     <script src="assets/js/app.js"></script>
 
     <script type="text/javascript">
-        /*$("#divAlert").hide();*/
-       /* $("#spinner").hide();*/
-
         $(document).ready(function () {
 
             $('label sup').css('color', 'red');
 
             console.log("Jquery is ready to shoot!!");
+
+            $("#divAlert").hide();
 
             $("#nav").load("layouts/nav.html");
 
@@ -96,25 +80,38 @@
 
 
             //validate form
-            $("#frmLogin").validate();
-            $("#frmLogin").on('submit', function (e) {
+            $("#frmRegister").validate();
+            $("#frmRegister").on('submit', function (e) {
 
                 e.preventDefault();
-                var login = {
-                    email: $("#email").val(),
+
+                var register = {
+                    user_type: 1,
+                    email: $("#txtEmail").val(),
+                    phone_number: $("#txtPhone").val(),
+                    password_hash: $("#txtPassword").val(),
+                    first_name: $("#txtFirstName").val(),
+                    last_name: $("#txtLastName").val(),
+                    other_name: $("#password").val(),
                     password_hash: $("#password").val(),
-                    keep_me_signin: $("#keepLogin").prop('checked')
+                    direction: 0
+
+
+                    //require_password_change: 0,
+                    //phone_number_confirmed: 1,
+                    //email_confirmed: 0,
+                    //active: 1
                 };
 
                 var data = {
-                    login: login
+                    register: register
                 };
 
-                if ($("#frmLogin").valid()) {
+                if ($("#frmRegister").valid()) {
 
                     $.ajax({
                         type: "POST",
-                        url: "/Services/authenticate.asmx/Login",
+                        url: "/Services/authenticate.asmx/Register",
                         dataType: "json",
                         contentType: "application/json; charset=utf-8",
                         data: JSON.stringify(data),
@@ -125,16 +122,13 @@
                             //parse the response as json data;
                             responseData = JSON.parse(responseData);
                             var status = responseData.Status;
-                            if (status == '1') {
+                            if (status >= '1') {
 
                                 /*window.location.href = window.location.host + "/admin/qrcodegen.aspx";*/
 
                                 sessionStorage.setItem('email', $("#email").val());
-
-                                var referLink = document.createElement("a");
-                                referLink.href = "auth/dashboard.aspx";
-                                document.body.appendChild(referLink);
-                                referLink.click();
+                                $("#divAlert").addClass("alert alert-success alert-dismissible fade show").attr('display', true).slideDown("slow");
+                                $("#lblErrorText").html(responseData.Message);
 
                             }
                             else if (status == '0') {
@@ -167,6 +161,8 @@
             });
         });
     </script>
+
+
 
 
 </body>
