created the receipt module abd updated upcoming events

--- a/Eventhings/clients/new/dashbaord.html
+++ b/Eventhings/clients/new/dashbaord.html
@@ -219,8 +219,8 @@
                         <div class="col-auto">
                             <div class="header__right">
                                 <div class="md:d-none">
-                                    <a href="login.html" class="button -sm -outline-light-dark sm:d-none">Join</a>
-                                    <a href="contact-1.html" class="button -sm -dark text-white ml-12">Get the App</a>
+                                    <a href="login.html" onclick="LogOut()" class="button -sm -outline-light-dark sm:d-none">Logout</a>
+                                    <!--<a href="contact-1.html" class="button -sm -dark text-white ml-12">Get the App</a>-->
                                 </div>
 
                                 <div class="header__menu justify-center items-center relative d-none md:d-flex">
