--- a/Eventhings/clients/new/customer-dashbaord.html
+++ b/Eventhings/clients/new/customer-dashbaord.html
@@ -61,12 +61,12 @@
                         <div class="col-2">
                             <div class="header__logo">
                                 <a class="base-logo" data-barba href="index.html">
-                                    <img class="base-logo-first" src="img/general/logo.svg" alt="logo">
-                                    <img class="base-logo-second" src="img/general/logo-dark.svg" alt="logo">
+                                    <img class="base-logo-first" src="https://eventiix.com/clients/assets/images/logo.png" alt="logo">
+                                    <img class="base-logo-second" src="https://eventiix.com/clients/assets/images/logo.png" alt="logo">
                                 </a>
 
                                 <a class="menu-logo" data-barba href="index.html">
-                                    <img src="img/general/logo-dark.svg" alt="logo">
+                                    <img src="https://eventiix.com/clients/assets/images/logo.png" alt="logo">
                                 </a>
                             </div>
                         </div>
