--- a/Eventhings/clients/new/login.html
+++ b/Eventhings/clients/new/login.html
@@ -576,7 +576,7 @@
                                 <div class="pl-120 lg:pl-48 md:pl-0 pt-120 md:pt-100">
                                     <div class="pt-120 md:pt-0">
                                         <div class="md:container sm:w-screen">
-                                            <h1 class="text-3xl md:text-3xl text-white">Welcome to Eventiix.com</h1>
+                                            <!--<h1 class="text-3xl md:text-3xl text-white">Welcome to Eventiix.com</h1>-->
                                         </div>
                                     </div>
                                 </div>
