--- a/Eventhings/clients/new/receipt.html
+++ b/Eventhings/clients/new/receipt.html
@@ -146,7 +146,7 @@
             qr = new QRious({
                 element: document.getElementById('qrcode'),
                 size: 206,
-                value: 'https://www.eventiix.com/clients/auth/codelink.aspx?' + _qrcodetext.get('code'),
+                value: 'https://www.eventiix.com/clients/auth/codelink.aspx?code=' + _qrcodetext.get('code'),
                 foreground: 'black'
             });
 
